# ActivePulseExe

./: AUTOSTART_SCREENSHOT_FIX.md  DEPLOYMENT_GUIDE.md  README.md  TROUBLESHOOTING_GUIDE.md  USER_DETECTION_SOLUTION.md  WINDOWS_AUTO_START_DEPLOYMENT.md  build-native.bat  build-windows-installer.bat  configure-autostart-ad.ps1  debug-user-detection.java  diagnose-issues.bat  force-clean.bat  linux-startup.sh  mac-startup.sh  package-linux.sh  package-mac-intel.sh  package-mac.sh  package-windows.bat  pom.xml  run-debug.bat  startup.ps1  test-screenshot.ps1  test-user-detection.bat  wix-overrides-task-scheduler.wxs  wix-overrides.wxs
.github/workflows/: build-installers.yml
resources/: add-autostart.ps1  wix-overrides.wxs
src/main/cpp/: CMakeLists.txt  WindowsUserDetector.cpp
src/main/java/com/activepulse/agent/: ActivePulseApplication.java  AutoStartManager.java  InstanceLock.java  SystemTrayManager.java
src/main/java/com/activepulse/agent/db/: DatabaseManager.java
src/main/java/com/activepulse/agent/monitor/: AppActivityRecorder.java  AppConfigManager.java  BrowserUrlTracker.java  InputActivityMonitor.java  InputActivityRecorder.java  ScreenshotCapture.java  ScreenshotRecorder.java  SessionReportManager.java  SystemLockDetector.java  SystemMetricsRecorder.java  UserStatus.java  UserStatusTracker.java  VideoSiteDetector.java  WindowInfo.java  WindowTracker.java
src/main/java/com/activepulse/agent/scheduler/: AgentScheduler.java
src/main/resources/: agent.env  application.properties  logback.xml  quartz.properties  tray-icon.icns  wix-overrides.wxs
(+20 files in other folders)
